hold/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - minio.g2dev.net
  rules:
  - host: minio.g2dev.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9090
